# snomed-terminology-translation

./: .env.template  .gitignore  README.md  Translation Phase 2 Report - DRAFT.txt  docker-compose.yml  korean_lookup_evaluation_findings.md  pyproject.toml
agent/: agent.py  deepl.py  main.py  models.py  prompt_templates.py  qdrant_store.py  tools.py  utils.py
configs/: models.json  pipeline_ko.json  pipeline_ko_wizard.json  project.json  resources_ko.yaml
configs/eval_sets/: ko_default.json
configs/flows/: ko_baseline-copy.json  ko_baseline.json  ko_baseline_copy.json  ko_consistency.json  ko_instruction_induction.json  kr-candidates-backtrans.json  snomed-backtrans-validation.json  snomed-bt-coherence.json  snomed-bt-hybrid.json  snomed-bt-rerank-tg27b.json  snomed-bt-rerank.json  snomed-bt-scale-dense.json  snomed-bt-scale.json  snomed-direct-dense-rerank.json  snomed-direct-dense.json  (+12 more)
docs/: embedding_analysis_and_model_comparison_2026-03-27.md  gemma4_26b_nvfp4_ablation_2026-04-21.md  gemma4_31b_remote_ablation_2026-04-21.md  handover_flow_graph_editor_2026-06-10.md  handover_sme_review_packet_2026-04-29.md  imaging_ablation_runbook.md  imaging_inconsistencies_2026-04-20.md  imaging_resources_ablation_findings_2026-04-20.md  khis_sme_feedback_plan_2026-05-18.md  long_tail_evaluation_plan.md  procedure_inconsistencies_2026-04-20.md  qwen122b_model_ablation_2026-04-21.md  qwen122b_prompt_optimisation_findings.md  qwen36b_model_ablation_2026-04-20.md  rag_analysis_and_improvement_plan.md  sonnet_judge_cross_check_2026-04-22.md  style_guide_v4_ablation_2026-04-20.md  synthetic_long_tail_findings_2026-04-22.md  todo_exemplar_retrieval_investigation.md  todo_imaging_resources_ablation.md  wizard.md
notebooks/: prepare_translation_resources.ipynb
pipelines/: assemble.py  config.py  context.py  exemplars.py  flow.py  graph.py  hard_rules.py  index_exemplars.py  publish.py  registry.py  run.py  run_flow.py  scoring.py
scripts/: migrate_flows_to_functions.py
snomed_translation/: assemble.py  back_translate.py  config.py  exemplars.py  formula.py  functions.py  generate.py  gepa_scaffold.py  graph.py  hard_rules.py  index_exemplars.py  publish.py  rerank.py  run.py  schema.py  snomed_index.py  snomed_rf2.py
style_guide/: ko_induced_v1.md  proposed_rules_v2.md  proposed_rules_v3.md  style_guide.md  style_guide_ko.lineage.json  style_guide_ko.md  style_guide_ko_gepa_light_minimal.md  style_guide_ko_gepa_light_v51seed.md  style_guide_ko_gepa_medium_qwenref.md  style_guide_ko_minimal.md  style_guide_ko_v2.lineage.json  style_guide_ko_v2.md  style_guide_ko_v3.lineage.json  style_guide_ko_v3.md  style_guide_ko_v3_abbr.md  style_guide_ko_v4.lineage.json  style_guide_ko_v4.md  style_guide_ko_v5.lineage.json  style_guide_ko_v5.md  style_guide_ko_v5_1.md
tests/: test_back_translate.py  test_function_adapters.py  test_generate.py  test_gepa_scaffold.py  test_hard_rules.py  test_optimize_store.py  test_rerank.py  test_snomed_index.py  test_snomed_rf2.py  test_translate_render.py
(+156 files in other folders)
