[project]
name = "snomed-translation-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.21",
    "cohere>=5.18.0",
    "deepl>=1.0.0",
    "FlagEmbedding>=1.2.10",
    "fastapi>=0.115.0",
    "google-search-results>=2.4.0",
    "ipykernel>=6.30.1",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.7",
    "llama-index>=0.10.9",
    "mcp[cli]>=1.2",
    "more-itertools>=10.8.0",
    "pandas>=2.3.2",
    "pygraphviz>=1.14",
    "pypdf>=6.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.8.2",
    "requests>=2.32.0",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    "transformers>=4.44.2,<5",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.30.0",
    "yake>=0.4.0",
]
